--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,8 +1,9 @@
-/Client.class
-/Message.class
-/Remote440.class
-/Remote440Exception.class
-/Server.class
-/Stub.class
-/network
-/Registry440.class
+/Fibonacci.class
+/FibonacciInterface.class
+/FibonacciStub.class
+/GetFibo.class
+/GetFiboInterface.class
+/GetFiboStub.class
+/TestClient.class
+/TestServer.class
+/rmi
